--- a/landing-page/public/styles/portfolio.module.css
+++ b/landing-page/public/styles/portfolio.module.css
@@ -1,7 +1,6 @@
 .landing-portfolio {
   height: 100vh;
   width: 100%;
-  background-color: #000000;
 }
 
 /* .portfolio-container {
